# french-rain-radar

./: .editorconfig  .gitattributes  .gitignore  CLAUDE.md  Makefile  README.md  setup.sh
.github/workflows/: backend.yml  client.yml  deploy-backend.yml  schema.yml
backend/: README.md  pyproject.toml
backend/caddy/: Caddyfile  Caddyfile.dev
backend/deploy/: README.md  env.example  install.sh  update.sh
backend/src/radar/: __init__.py  cli.py  colormap.py  config.py  grib.py  manifest.py  meteofrance.py  nowcast.py  radar_hdf5.py  render.py  reproject.py  retention.py  tile_server.py  tiles.py
backend/systemd/: arome-ingest.service  arome-ingest.timer  radar-cleanup.service  radar-cleanup.timer  radar-ingest.service  radar-ingest.timer  radar-nowcast.service  radar-nowcast.timer  radar-tileserver.service
backend/tests/: conftest.py  test_cli_nowcast.py  test_grib.py  test_manifest.py  test_manifest_dedup.py  test_radar_hdf5.py  test_render.py  test_reproject.py  test_tile_server.py
backend/tests/fixtures/: README.md
client/: README.md  gradle.properties  gradlew  gradlew.bat  settings.gradle.kts
client/androidApp/: build.gradle.kts  proguard-rules.pro
client/androidApp/src/androidMain/: AndroidManifest.xml
client/androidApp/src/main/: AndroidManifest.xml
client/gradle/: libs.versions.toml
client/iosApp/: README.md
client/iosApp/iosApp/: ContentView.swift  Info.plist
client/shared/: build.gradle.kts
client/wasmJsApp/: build.gradle.kts
dev/: README.md  docker-compose.yml  fake-data.py
docs/: architecture.md  data-sources.md  deployment.md
docs/adr/: 0001-monorepo.md  0002-no-python-web-framework.md  0003-kmp-with-expect-actual-map.md  0004-lazy-tile-server.md
schema/: README.md  manifest.schema.json
schema/examples/: manifest.example.json
tools/: check-schema-consistency.sh
(+31 files in other folders)
