[project]
name = "radar"
version = "0.1.0"
description = "French rain radar pipeline: Météo-France ingestion + pysteps nowcast + PNG rendering"
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = { text = "TBD" }
authors = [{ name = "axel" }]
dependencies = [
    "httpx>=0.27",
    "cfgrib>=0.9.14",
    "h5py>=3.10",
    "xarray>=2024.11",
    "numpy>=1.26",
    "scipy>=1.13",
    "pillow>=11.0",
    "pyproj>=3.6",
    "jsonschema>=4.23",
    "pydantic-settings>=2.6",
    "tenacity>=9.0",
    "structlog>=24.4",
    "typer>=0.15",
    "check-jsonschema>=0.30",
    "fastapi>=0.115",
    "uvicorn>=0.32",
    "defusedxml>=0.7",
]

[project.optional-dependencies]
# pysteps compiles native code; gate behind an extra so the base install
# works without system Python headers and so dev can iterate offline.
# opencv-python-headless is required by pysteps' LK motion routine
# (uses cv2.morphologyEx); headless variant skips GUI libs we'd never use.
# Install with:  uv sync --extra nowcast
nowcast = ["pysteps>=1.10", "opencv-python-headless>=4.10"]

[project.scripts]
radar = "radar.cli:app"

[dependency-groups]
dev = [
    "ruff>=0.7",
    "pytest>=8.3",
    "pytest-cov>=6.0",
    "mypy>=1.13",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/radar"]

[tool.uv]
package = true

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "RUF"]
ignore = ["E501"]  # let the formatter handle long lines

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --strict-markers"
pythonpath = ["src"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src/radar"]
